--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ data/waymo/*
 exp/pvg_example/checkpoint_final.pth
 exp/pvg_example/005/checkpoint_final.pth
 exp/pvg_example/005/README.md
+
+submodules/gsplat.egg-info/
